--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </ul>
     
         <div class="detail-image-container">
-            <div class="detail-image-wrapper" >
+            <div class="detail-image-wrapper" data-image-role="wrapper">
                 <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
                 <span class="detail-image-title" data-image-title="title">Stayin' Alive</span>
             </div>
